Added description to create_embeddings notebook

--- a/Embeddings/create_embeddings.ipynb
+++ b/Embeddings/create_embeddings.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "![TomoSAM logo](https://github.com/fsemerar/SlicerTomoSAM/raw/main/TomoSAM/Resources/Media/tomosam_logo.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This notebook helps with the generation of the image embeddings for all the slices of your tiff stack along the three Cartesian directions. You can create the embeddings by running this notebook either locally or on Colab. A GPU is recommended for this step to speed up the process; in Colab, make sure to select `Runtime`→`Change runtime type` and set the `Hardware accelerator` to GPU. Locally, you will first need to create the conda environment, as shown in the README."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -17,7 +35,7 @@
    "source": [
     "from google.colab import output\n",
     "output.enable_custom_widget_manager()\n",
-    "!pip install 'git+https://github.com/facebookresearch/segment-anything.git'"
+    "!pip install segment-anything"
    ]
   },
   {
