Resized logo in notebook

--- a/Embeddings/create_embeddings.ipynb
+++ b/Embeddings/create_embeddings.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![TomoSAM logo](https://github.com/fsemerar/SlicerTomoSAM/raw/main/TomoSAM/Resources/Media/tomosam_logo.png)"
+    "<div>\n",
+    "<img src=\"https://github.com/fsemerar/SlicerTomoSAM/raw/main/TomoSAM/Resources/Media/tomosam_logo.png\" width=\"300\"/>\n",
+    "</div>"
    ],
    "metadata": {
     "collapsed": false
