Added create_embeddings function within logic

--- a/Embeddings/create_embeddings.ipynb
+++ b/Embeddings/create_embeddings.ipynb
@@ -95,6 +95,8 @@
     "                img_slice = img[:, :, k]\n",
     "            sys.stdout.write(f\"\\rCreating embedding for {k + 1}/{img.shape[i]} image\")\n",
     "            predictor.reset_image()\n",
+    "            if torch.cuda.is_available():\n",
+    "                torch.cuda.empty_cache()\n",
     "            predictor.set_image(np.repeat(img_slice[:, :, np.newaxis], 3, axis=2))\n",
     "            embeddings[i].append({'original_size': predictor.original_size,\n",
     "                                  'input_size': predictor.input_size,\n",
@@ -102,7 +104,7 @@
     "\n",
     "    with open(output_filepath + \".pkl\", 'wb') as f:\n",
     "        pickle.dump(embeddings, f)\n",
-    "        print(f\"Saved {output_filepath}.pkl\")"
+    "        print(f\"\\nSaved {output_filepath}.pkl\")"
    ]
   },
   {
