Moved help text from button to Help & Acknoledgements

--- a/Embeddings/create_embeddings.ipynb
+++ b/Embeddings/create_embeddings.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from google.colab import output\n",
     "output.enable_custom_widget_manager()\n",
-    "!pip install segment-anything"
+    "!pip install https://github.com/facebookresearch/segment-anything/archive/6fdee8f2727f4506cfbbe553e23b895e27956588.zip"
    ]
   },
   {
